tests/compile_fail/args_not_impl_default.stderr
error[E0277]: the trait bound `TestArgs: Default` is not satisfied
  --> $DIR/args_not_impl_default.rs:6:20
   |
6  | #[arbitrary(args = TestArgs)]
   |                    ^^^^^^^^ the trait `Default` is not implemented for `TestArgs`
   |
note: required by a bound in `proptest::arbitrary::Arbitrary::Parameters`
  --> $DIR/traits.rs:54:22
   |
54 |     type Parameters: Default;
   |                      ^^^^^^^ required by this bound in `proptest::arbitrary::Arbitrary::Parameters`
